tests/sksl/errors/ArrayReturnTypes.dsl.glsl
### Compilation failed:

error: functions may not return type 'float4x4[2]'

error: functions may not return type 'int[1]'

2 errors
